log/build_2024-05-08_12-22-13/doozy_forklift/stderr.log
  File "/home/avinaash/ForkLift_AMR/install/doozy_forklift/lib/python3.8/site-packages/doozy_forklift/dock_with_pallet_03.py", line 179
    else:
    ^
SyntaxError: invalid syntax

